--- a/html-forms/index.html
+++ b/html-forms/index.html
@@ -1,18 +1,54 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta charset="utf-8" >
+    <meta name="viewport" content="width=device-width, initial-scale-1.0">
     <title>Front-end foundations: HTML forms</title>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
       rel="stylesheet"
       type="text/css"
-    />
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    >
+    <link href="style.css" rel="stylesheet" type="text/css" >
   </head>
 
   <body>
-    <main></main>
+    <main>
+      <form>
+        <div>
+          <label for="name">Name:</label>
+          <input id="name" type="text" name="name"
+          autofocus="on"
+          required
+          >
+        </div>
+
+        <div>
+          <label for="email">Email:</label>
+          <input id="email" type="text" name="email" 
+          required
+          >
+        </div>
+        <div>
+          <label for="form-message">Your message:</label>
+          <textarea 
+          id="form-message" 
+          name="message"
+          class="largeBox"
+          required
+          maxlength="200" 
+        ></textarea>
+
+        </div>
+        <div>
+          <div class="group">
+          <button type="submit">Submit</button>
+        <button type="reset">Reset</button>
+        </div>
+      </div>
+        
+      </form>
+      
+    </main>
   </body>
 </html>
